--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,6 +10,11 @@ font-family: 'Raleway', sans-serif (negrita 2)*/
     box-sizing: border-box;
 }
 
+svg {
+    cursor: pointer;
+    
+}
+
 
 // variables 
 @import "variables";
